--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "^48.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-web": "~0.18.7"
+    "react-native": "0.71.8",
+    "react-native-maps": "1.3.2",
+    "react-native-web": "~0.18.7",
+    "expo-camera": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "expo-module-scripts": "^3.0.9",
     "typescript": "^4.6.3"
   },
   "scripts": {
